<resources>
    <string name="app_name">Hey!Road</string>
    <string name="Siema">siema</string>
    <string name="tu_bedzie_cu">Tu bedzie cuś</string>
    <string name="Welcome_logo">welcome_logo</string>
    <string name="maps_api_key">AIzaSyBk1hmMcRrgsmj1nUkOXrJsjWVIKaFm4hU</string>
    <string name="facebook_login">FaceBook Login</string>
    <string name="google_login">Google Login</string>
    <string name="Project">Project</string>
    <string name="facebook_app_id">293125095141415</string>
    <string name="fb_login_protocol_scheme">fb293125095141415</string>
    <string name="login">login</string>
    <string name="haslo">haslo</string>
    <string name="je_li_jeszcze_nie_masz_konta_zarejestruj_sie">Jeśli jeszcze nie masz konta: zarejestruj sie</string>
    <string name="e_mail">e-mail</string>
    <string name="powtorz_haslo">powtorz haslo</string>
    <string name="zarejestruj">zarejestruj</string>
    <string name="ponownie_has_o">ponownie hasło</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="HeyRoad">Hey!Road</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="menu_opener">menu opener</string>
    <string name="menu_closer">menu closer</string>
    <string name="drive">Drive</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="zapamietaj_mnie">zapamiętaj mnie</string>
    <string name="profil">Profil</string>
    <string name="wybierz_uklad">Wybierz układ</string>
    <string name="help_text">Jeśli jesteś w stanie ocenić na czym polega awaria motocykla, wybierz odpowiedni układ i usterkę. Jeśli usterki nie ma na liście, albo nie jesteś w stanie ocenić, zaznacz pole: "Ciężko ocenić" i opisz usterkę swoimi słowami</string>
    <string name="Ciezko_ocenic">Ciężko ocenić</string>
    <string name="opisz_usterk">Opisz usterkę</string>
    <string name="ZAREJESTRUJ">ZAREJESTRUJ</string>
    <string name="imię">imię</string>
    <string name="nazwisko">nazwisko</string>
    <string name="hasło">hasło</string>
    <string name="email">e-mail</string>
    <string name="aktualizuj">aktualizuj</string>
    <string name="motocykl">motocykl</string>
    <string name="model">model</string>
    <string name="rocznik">rocznik</string>
    <string name="styl_jazdy">styl jazdy</string>
    <string name="q.no1">Tak. Początkowa rejestracja, a następnie logowanie się do aplikacji pozwala nam na przechowywanie w naszej bazie danych informacji na temat twojego profilu, motocykla i pokonanych przez Ciebie tras.</string>
    <string name="q.no2">Aplikacja dostępna jest dla każdej osoby, która ma ochotę z niej korzystać. Nie prowadzimy weryfikacji wiekowej, ani nie określamy żadnych minimalnych wymagań dla użytkowników.
        Każdy kto ma chęć korzystania ma do tego pełne prawo. Zachęcamy najbardziej tych, którzy należą do grona motocyklistów, gdyż to dla nich ta aplikacja jest dedykowana.</string>
    <string name="q.no3">Na dzień dzisiejszy aplikacja jest dostępna tylko dla użytkowników smartphonów z systemem Android. W naszych planach mamy poszerzenie funkcjonalności o system iOS, oraz stworzenie wersji desktopowej,
        która pozwoli na edycję naszego profilu, przeglądanie pokonanych tras i komunikowanie się z grupą znajomych.</string>
    <string name="q.no4">Nie. Korzystanie z aplikacji jest zupełnie bezpłatne: nie wymaga żanych przelewów, abonamentów czy jakiejkolwiek innej formy płatności. Została napisana przez motocyklistę dla motocyklistów po to,
        aby dać więcej przyjemności z tego co już same w sobie jest przyjemne.</string>
    <string name="q.no5">Jak już zapewne zauważyłeś/zauważyłaś pierwszym krokiem jest rejestracja. Następnie na ekranie domowym zobaczysz ogłoszenia osób z twojej okolicy, które szukają osób do wspólnej jazdy na motocyklu.
        Jeśli nie znajdziesz nikogo z twoich stron, możesz skorzystać z opcji Drive, po to, aby zadeklarować swoją chęć do jazdy w grupie. Osoba, która zauważy twoje ogłoszenie wyśle Ci informację na temat swojego stylu jazdy,
        czasu jaki planuje poświęcić na jazdę, razem z prośbą o Twoją akceptację. Jeśli zaakceptujesz tę prosbę, aplikacja wyznaczy sugerowane miejsce na spotkanie. Po powrocie do domu masz możliwość zaproszenia danej osoby
        do grona znajomych, aby móc ponowić wspólną przejażdżkę.</string>
    <string name="q.no6">Niestety nie. Na dzień dzisiejszy aplikacja wymaga połączenia z internetem. Ale w dalszych planach rozwoju mamy zamiar rozbudować aplikację o właśnie taką możliwość.</string>
    <string name="usuń">usuń</string>
    <string name="remove">Jeśli nie chcesz już korzystać z aplikacji, albo uważasz, że nie będzie Ci już potrzebna, możesz usunąć swój profil z bazy danych.
        Pamiętaj jednak, że robiąć to, usunięte zostaną wszelkie twoje dane związane z logowaniem, pokonanymi trasami, \n
        lista znajomych i wszystko co nawiązuje do twojego konta. Tej operacji nie da się odwrócić!</string>
    <string name="wybierz_styl">styl jazdy:</string>

    <string-array name="uklad">
        <item>Układ Elektryczny</item>
        <item>Układ Hamulcowy</item>
        <item>Układ Napędowy</item>
        <item>Układ Chłodzenia</item>
        <item>Układ Paliwowy</item>
        <item>Układ Zawieszenia</item>
        <item>Silnik</item>
    </string-array>

    <string-array name="styl_moto">
        <item>początkujący</item>
        <item>sportowy</item>
        <item>turystyczny</item>
        <item>rekreacyjny</item>
        <item>offroad</item>
    </string-array>

</resources>
