<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backapi"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSecondary"
        android:theme="?attr/actionBarTheme"
        android:layout_marginBottom="70dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:inputType="text"
        android:hint="@string/login"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/haslo"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/ponownie_has_o"
        android:textSize="25sp" />

    <Button
        android:id="@+id/HelpBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:hint="@string/ZAREJESTRUJ"
        android:onClick="klik"/>

</LinearLayout>