<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/backapi"
    tools:context=".LoginActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="130dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:hint="@string/login"
        android:inputType="text"
        android:textSize="22sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:hint="@string/haslo"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="22sp"/>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/zapamietaj_mnie" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:text="@string/login"
        android:onClick="loginClick"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textStyle="bold"
        android:text="@string/je_li_jeszcze_nie_masz_konta_zarejestruj_sie" />

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="2dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb"
            style="@style/FacebookLoginButton"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google"
            style="@style/GoogleLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_login"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>
</ScrollView>