<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backapi"
    android:id="@+id/profil_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profil_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorSecondary"
            android:elevation="4dp"
            android:theme="?attr/actionBarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/gradient"
                android:layout_height="160dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:elevation="1dp"
                android:src="@drawable/heyroad"
                app:cardCornerRadius="10dp"
                app:civ_border_color="#000000"
                app:civ_border_width="3dp" />

                <TextView
                    android:id="@+id/logo"
                    android:layout_gravity="end"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="125dp"
                    android:textStyle="bold"
                    android:onClick="changePic"
                    android:textSize="15dp"
                    android:textColor="#686868"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zmień logo" />
            </FrameLayout>

        <TextView
            android:id="@+id/basicData"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Podstawowe dane użytkownika:" />

        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="imię:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/imię"
            android:inputType="text"
            android:textSize="15sp"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="nazwisko:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/nazwisko"
            android:inputType="text"
            android:textSize="15sp"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="login:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/login"
            android:inputType="text"
            android:textSize="15sp"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="e-mail:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="15sp"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hasło:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hasło_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/hasło"
            android:inputType="textPassword"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/daneBtn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:text="@string/aktualizuj"
            android:onClick="daneBtn"/>


        <View
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="2dp" />

        <TextView
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Dane motocykla i stylu jazdy:" />

        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Producent motocykla:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/moto_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/motocykl"
            android:inputType="text"
            android:textSize="15sp"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="model:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/model_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/model"
            android:inputType="text"
            android:textSize="15sp"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="rocznik:" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rocznik_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:hint="@string/rocznik"
            android:inputType="text"
            android:textSize="15sp"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="styl jazdy:" />

        <RelativeLayout
            android:id="@+id/spinner_styl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
            <Spinner
                android:id="@+id/spinner_moto"
                android:verticalScrollbarPosition="defaultPosition"
                android:prompt="@string/wybierz_styl"
                android:entries="@array/styl_moto"
                android:spinnerMode="dialog"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                android:layout_alignParentTop="true"/>
        </RelativeLayout>

        <Button
            android:id="@+id/motoBtn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:text="@string/aktualizuj"
            android:onClick="motoBtn"/>

        <View
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="2dp" />

        <TextView
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove" />

        <Button
            android:id="@+id/usunBtn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:text="@string/usuń"
            android:onClick="usunBtn"/>

    </LinearLayout>
</ScrollView>