<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/help"
    android:id="@+id/help_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/help_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorSecondary"
            android:theme="?attr/actionBarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/textHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="13dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:text="@string/help_text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="169dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Ciezko_ocenic" />


        <RelativeLayout
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >
            <Spinner
                android:id="@+id/spinner_no1"
                android:verticalScrollbarPosition="defaultPosition"
                android:prompt="@string/wybierz_uklad"
                android:entries="@array/uklad"
                android:spinnerMode="dialog"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                android:layout_alignParentTop="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >
            <Spinner
                android:id="@+id/spinner_no2"
                android:verticalScrollbarPosition="defaultPosition"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                android:layout_alignParentTop="true"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:visibility="invisible"
            android:hint="@string/opisz_usterk"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <Button
            android:id="@+id/HelpBtn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:text="@string/help"
            android:onClick="HelpClick"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>